--- a/server/package.json
+++ b/server/package.json
@@ -7,14 +7,13 @@
 	},
 	"dependencies": {
 		"api": "^4.2.0",
-		"axios": "^0.25.0",
+		"axios": "^0.26.0",
 		"cookie-parser": "~1.4.4",
 		"debug": "~2.6.9",
 		"express": "~4.16.1",
 		"http-errors": "~1.6.3",
 		"morgan": "~1.9.1",
 		"nodemon": "^2.0.15",
-		"pug": "2.0.0-beta11",
-		"web3": "^1.7.0"
+		"pug": "2.0.0-beta11"
 	}
 }
