src: add header search bar

--- a/client/package.json
+++ b/client/package.json
@@ -6,27 +6,24 @@
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
-    "assert": "^2.0.0",
-    "crypto-browserify": "^3.12.0",
-    "eth-lib": "^0.1.29",
-    "os-browserify": "^0.3.0",
+    "node-sass": "^7.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.2.1",
-    "react-scripts": "^5.0.0",
+    "react-scripts": "5.0.0",
     "react-switch": "^6.0.0",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
+    "resolve-url-loader": "^5.0.0",
+    "sass": "^1.49.7",
+    "sass-loader": "^12.4.0",
     "web-vitals": "^2.1.4",
-    "web3": "^1.7.0",
-    "web3-eth-accounts": "^1.7.0"
+    "web3": "^1.7.0"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -48,8 +45,15 @@
     ]
   },
   "devDependencies": {
-    "sass": "^1.49.7",
-    "sass-loader": "^12.4.0",
-    "webpack": "^5.68.0"
+    "assert": "^2.0.0",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.1.11",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0"
   }
 }
