--- a/client/package.json
+++ b/client/package.json
@@ -11,10 +11,12 @@
     "@testing-library/react": "^12.1.2",
     "@testing-library/user-event": "^13.5.0",
     "install": "^0.13.0",
+    "ipfs-http-client": "^56.0.1",
     "node-sass": "^7.0.1",
     "npm": "^8.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^12.0.4",
     "react-icons": "^4.3.1",
     "react-pro-sidebar": "^0.7.1",
     "react-router-dom": "^6.2.1",
